overflow fix

--- a/src/screens/AppDetails.module.css
+++ b/src/screens/AppDetails.module.css
@@ -76,7 +76,7 @@
 	/* align-items: center; */
 	justify-content: flex-start;
 	width: 90vw;
-	padding: 5vw;
+	padding: 5vh;
 	overflow: scroll;
 }
 
@@ -84,7 +84,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin-right: 5vw;
+	margin-left: 5vw;
 }
 
 .galleryCurrentPic {
